app.css
/* ... */
/* Fading animation */
.fade {
  animation-name: fade;
  animation-duration: 1.5s;
}

@keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

.column{
  display: flex;
  flex-flow: column;
  padding: 3%;
  height: 100%;
}

.column p{
  font-size: 1.5rem;
}

.button{
  color: black;
  text-decoration: none;
  border-radius: 5px;
  font-size: 2.1rem;
  padding: 1%;
  background-color: #EAECF0;
  margin-bottom: 3vh;
  margin-top: auto;
  width: fit-content;
}

.button:hover, .button:focus{
  background-color: white;
}

.arrow-pulse-down:after {
  content: "🡣"; /* Here you can change the style of the arrow */
  color: white;
  position: absolute;
  width: 35px; height: 35px;
  margin: 0 auto;
  left: 0; right: 0;
  font-size: 35px;
  animation: arrow-pulse-down 1000ms linear infinite;
}

@keyframes arrow-pulse-down {
  0% {
    bottom: 50px;
    opacity: 0;
  }
  20% {
    opacity: .1;
  }
  30% {
    opacity: .2;
  }
  45% {
    opacity: .3;
  }
  70% {
    bottom: 5px;
    opacity: .4;
  }
  95% {
    bottom: -20px;
    opacity: .5;
  }
  100% {
    bottom: -20px;
    opacity: .5;
  }
}

.nemesis{
  background-image: url("images/gallery/7_25-Lux-Black-Nemesis_rr34-1024x576.png");
}

h2{
  font-size: 3rem;
  margin-bottom: 1vh;
}

/* About Us Page */

.bannerText {
  font-size: 5.5rem;
  color: white;
  background-color: rgba(0, 0, 0, 30%);
  position: absolute;
  padding: 1%;
  width: fit-content;
  border-radius: 4px;
  top: 25%;
  left: 50%;
  z-index: 0;
  transform: translate(-50%, -50%);
}

.bannerImage{
  width: 100%;
  position: relative;
  z-index: -1;
  object-fit: cover;
  background-size: cover;
  height: 40vh;
  background-position-y: -50vh;
  background-position-x: -5vh;
}

.aboutRich{
  width: 95%;
  display: flex;
  flex-flow: row nowrap;
  color: white;
  margin-bottom: 5vh;
  height: fit-content
}

.aboutRich img{
  width: 45%;
  margin: 2.5%;
  height: auto;
}

#aboutRich {
  width: 45%;
  margin: 2.5%;
  display: flex;
  flex-flow: column wrap;
  align-items: center;
}

#aboutRich h1 {
  margin-bottom: 5vh;
  align-self: flex-start;
}

#aboutRich p{
  align-self: center;
  font-size: 1.25rem;
}

.aboutRich img {
  width: 42vw;
  object-fit: cover;
  height: auto;
}

.aboutimages{
  display: flex;
  flex-flow: column wrap;
  justify-content: center;
  align-items: center;
}

.aboutimages img{
  margin: 1%;
  height: 40vh;
  width: 95%;
  object-fit: cover;
}

.aboutrowimages {
  margin: 5vh 0;
  width: auto;
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}

.aboutext{
  display: flex;
  justify-content: center;
  font-size: 1.5rem;
}
.aboutext:last-of-type{
  margin-bottom: 3vh;
}
/* End About Us Page */




/** Customize car **/
.twoEvenRow .column{
  padding: 3%;
  padding-top: 5%;

}

.onePartColumn{
  display: flex;
  flex-flow: column;
  align-items: center;
  height: 45vh;
  width: 80%;
  color: white;
}

.onePartColumn a{
  margin-top: 10px;
}

/** Customize car **/

.twoEvenRow .column{
  padding: 3%;
  padding-top: 5%;

}

.onePartColumn{
  display: flex;
  flex-flow: column;
  align-items: center;
  height: 45vh;
  width: 80%;
  color: white;
}

.onePartColumn a{
  margin-top: 10px;
}

h1{
  z-index: 0;
  color: white;
  font-size: 5.5rem;
}

label{
  color: white;
}

.form{
  margin-top: 3vh;
  width: 95%;
  display: flex;
  flex-flow: column;
}

.form form{
  margin-top: 5vh;
  width: 90%;
  align-self: center;
}

.form label{
  font-size: 2.1rem;
}

.form textarea{
  margin-bottom: 3vh;
  padding: 1%;
  width: 100%;
  height: 10vh;
  font-size: 1.8rem;
  resize: none;
}

.form textarea::placeholder{
  color: gray;
  top: 0;
}

.form input{
  margin-top: 2vh;
  width: fit-content;
  font-size: 2.1vh;
  padding: 1%;
}

.blackwidow{
  background-image: url(images/instagram/trionsupercarsorange7.jpg);
}

.imageSection{
  padding-top: 1%;
  justify-content: center;
  align-items: center;
  display: flex;
  flex-flow: column;
  height: 100%;
  width: 80%;
  padding: 2%;
  background-color: #323443;
}

.imageSection div:first-child{
  display: flex;
  flex-flow: row;
  height: 60%;
}

#largeImage{
  position: relative;
  width: 80%;
  height: 65%;
  object-fit: cover;
}

.imageSectionBottom{
  margin-top: 4vh;
  width: 100%;
  height: 20%;
  align-self: flex-start;
  justify-content: center;
  display: flex;
  flex-flow: row;
}

.imageSectionBottom img{
  object-fit: cover;
  height: 100%;
  width: 20%;
  margin: 1%;
}

#customization{
  display: flex;
  flex-flow: column wrap;
  margin: 5%;
  /* margin-top: 2vh; */
  width: 35%;
  height: 70vh;
  background-color: grey;
}

.horizontal{
  background-color: #323443;
  width: 100%;
  height: 95vh;
  display: flex;
  flex-flow: row;
}


.sideScrollRow{
  width: 50%;
  display: flex;
  flex-flow: row;
  justify-content: space-evenly;
}


.sideScrollRow .column{
  display: flex;
  width: fit-content;
  align-items: flex-start;
}

.sideScrollRow a{
  color: white;
  margin-top: 1rem;
  font-size: 2rem;
}

.flexRow{
  width: 100%;
  display: flex;
  flex-flow: row wrap;
  justify-content: flex-start;
}


.merchItem{
  padding: 1%;
  margin: 1%;
  background-color: #323443;
  display: flex;
  flex-flow: column;
  width: 23%;
  min-width: 300px;
  max-width: 480px;
  align-items: flex-start;
}

.merchItem .button{
  align-self: flex-end;
  margin-bottom: 0;
  background-color: black;
}

.merchItem h3{
  font-size: 1.8rem;
}

.merchItem img{
  object-fit: cover;
  width: 95%;
  height: 20vh;
}

.flexRow a{
  color: white;
  font-size: 2rem;
  text-decoration: none;
}

.flexRow a:hover, .flexRow a:focus{
  text-decoration: underline;
}

#cartNumber{
  color: black;
  position: absolute;
  font-size: 1.5rem;
  bottom: -8px;
  right: -5px;
  background-color: transparent;
  border-radius: 25%;
  padding: 2px;
}

.itemText{
  font-size: 3rem;
  color: white;
  text-decoration: none;
}

.itemText:focus, .itemText:hover{
  text-decoration: underline;
}
/* ... */

